lintian (2.5.0~rc4) UNRELEASED; urgency=low

  * Summary of tag changes:
    + Added:
      - duplicate-files
      - format-3.0-but-debian-changes-patch

  * checks/copyright-file.desc:
    + [ADB] Correct a spelling mistake ("coypright" -> "copyright") in the
      description of copyright-refers-to-deprecated-bsd-license-file;
      thanks, Kees Cook.  (Closes: #623780)
  * checks/duplicate-files{,.desc}:
    + [NT] Added to check for duplicate files in usr/share/doc.  Thanks to
      Axel Beckert for the suggestion.  (Closes: #614715)
  * checks/patch-systems{,.desc}:
    + [NT] Detect when 3.0 (quilt) packages have a debian-changes-VERSION
      patch without a patch header.  Thanks to Iain Lane for suggestion
      and patch.  (Closes: #588873)

  * lib/Lintian/ProcessableGroup.pm:
    + [NT] Properly handle if the changes file is located directly in the
      file system root.  Thanks to Trent W. Buck for the bug report.
      (Closes: #624149)

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Sat, 23 Apr 2011 13:37:52 +0100

lintian (2.5.0~rc3) unstable; urgency=low

  * Summary of tag changes:
    + Added:
      - dir-or-file-in-run
      - intra-source-package-circular-dependency
      - package-contains-broken-symlink
      - classpath-contains-relative-path
      - jar-not-in-usr-share
      - executable-jar-without-main-class
      - missing-dep-on-jarwrapper
      - missing-classpath
      - javalib-but-no-public-jars
      - missing-manifest
      - codeless-jar
      - missing-pre-dependency-on-multiarch-support

  * checks/*.desc:
    + [NT] Updated the Needs-Info field to include the new
      collections where needed.
  * checks/binaries:
    + [NT] Accepted patch from Loïc Minier to support the armhf
      architecture.  (Closes: #618587)
    + [NT] Drop wrong checks for multiarch directories.  Multiarch
      directories are only allowed in packages of the given architecture.
      Thanks to Steve R. Langasek for the patch.