@@ -176,6 +176,8 @@ if ($type ne 'udeb') {
 	tag 'extended-description-is-empty';
     } elsif ($lines <= 2 and not $synopsis =~ /(dummy|transition)/i) {
 	tag 'extended-description-is-probably-too-short';
+    } elsif ($description =~ /^ \.\s*\n|\n \.\s*\n \.\s*\n|\n \.\s*\n?$/) {
+	tag 'extended-description-contains-empty-paragraph';
     }
 }
 
