@@ -1,0 +1,40 @@
+Source: {$srcpkg}
+Priority: extra
+Section: {$section}
+Maintainer: {$author}
+Standards-Version: {$standards_version}
+Build-Depends: debhelper (>= 7)
+
+Package: {$srcpkg}
+Architecture: {$architecture}
+Depends: $\{shlibs:Depends\}, $\{misc:Depends\}
+Description: package to test empty first paragraph
+ .
+ The first paragraph
+ of this description
+ is empty. It is also an empty package.
+
+Package: {$srcpkg}-2
+Architecture: {$architecture}
+Depends: $\{shlibs:Depends\}, $\{misc:Depends\}
+Description: package to test empty last paragraph
+ The last paragraph
+ of this description
+ is empty. It is also an empty package.
+ .
+ Unfortunately this doesn't trigger the warning, an empty last paragraph
+ seems to get stripped out already before it is handed over.
+ .
+
+Package: {$srcpkg}-3
+Architecture: {$architecture}
+Depends: $\{shlibs:Depends\}, $\{misc:Depends\}
+Description: package to test empty paragraph in the middle
+ There is an
+ empty paragraph
+ in between. It is also an empty package.
+ .
+ .
+ There is an
+ empty paragraph
+ in between. It is also an empty package.
