@@ -1,0 +1,5 @@
+Testname: description-empty-paragraph
+Sequence: 6000
+Version: 1.0
+Description: Tests of empty paragraphs in descriptions
+Test-For: extended-description-contains-empty-paragraph
